ui: some animation changes reversed, fixed scroll jumping issue?

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,6 +6,8 @@ body,
 #__next {
   min-height: 100%;
   height: auto;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 body {
